src/tests/snapshots/fern__tests__lexer__lex_quote_str.snap
---
source: src/tests/lexer.rs
expression: tokens
---
[
    Ok(
        Tk {
            class: SOI,
            span: Span {
                range: 0..0,
                source: "echo \"foo bar\" biz baz",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 0..4,
                source: "echo \"foo bar\" biz baz",
            },
            flags: TkFlags(
                IS_CMD | BUILTIN,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 5..14,
                source: "echo \"foo bar\" biz baz",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 15..18,
                source: "echo \"foo bar\" biz baz",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 19..22,
                source: "echo \"foo bar\" biz baz",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: EOI,
            span: Span {
                range: 22..22,
                source: "echo \"foo bar\" biz baz",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
]
