src/tests/snapshots/fern__tests__lexer__lex_redir_fds.snap
---
source: src/tests/lexer.rs
expression: tokens
---
[
    Ok(
        Tk {
            class: SOI,
            span: Span {
                range: 0..0,
                source: "echo foo 1>&2",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 0..4,
                source: "echo foo 1>&2",
            },
            flags: TkFlags(
                IS_CMD | BUILTIN,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 5..8,
                source: "echo foo 1>&2",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Redir,
            span: Span {
                range: 9..13,
                source: "echo foo 1>&2",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: EOI,
            span: Span {
                range: 13..13,
                source: "echo foo 1>&2",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
]
