src/tests/snapshots/fern__tests__lexer__lex_simple.snap
---
source: src/tests/lexer.rs
expression: tokens
---
[
    Ok(
        Tk {
            class: SOI,
            span: Span {
                range: 0..0,
                source: "echo hello world",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 0..4,
                source: "echo hello world",
            },
            flags: TkFlags(
                IS_CMD | BUILTIN,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 5..10,
                source: "echo hello world",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 11..16,
                source: "echo hello world",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: EOI,
            span: Span {
                range: 16..16,
                source: "echo hello world",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
]
