src/tests/snapshots/fern__tests__lexer__lex_with_keywords.snap
---
source: src/tests/lexer.rs
expression: tokens
---
[
    Ok(
        Tk {
            class: SOI,
            span: Span {
                range: 0..0,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 0..2,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                KEYWORD,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 3..7,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                IS_CMD,
            ),
        },
    ),
    Ok(
        Tk {
            class: Sep,
            span: Span {
                range: 7..9,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 9..13,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                KEYWORD,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 14..18,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                IS_CMD | BUILTIN,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 19..22,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Sep,
            span: Span {
                range: 22..24,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
    Ok(
        Tk {
            class: Str,
            span: Span {
                range: 24..26,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                KEYWORD,
            ),
        },
    ),
    Ok(
        Tk {
            class: EOI,
            span: Span {
                range: 26..26,
                source: "if true; then echo foo; fi",
            },
            flags: TkFlags(
                0x0,
            ),
        },
    ),
]
